[package]
authors = ["inkhare <iapricot@foxmail.com>"]
description = "A transparently hijack bindings for Rust."
edition = "2018"
keywords = ["transparently", "hijack"]
license = "MIT/Apache-2.0"
name = "leicester"
readme = "README.md"
version = "0.0.1"

[dependencies]
rust-iptables = { version = "0.0.2" }

[[example]]
name = "leicester"
path = "examples/leicester.rs"
